# yapli

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  caddyfile  flake.nix  index.html  out.data  out.js  out.wasm.map  rootCA.pem  watch.bash
.github/workflows/: deploy.yml
certs/: localhost.crt  localhost.csr  localhost.ext  localhost.key  rootCA.key
public/: index.html  manifest.json  sw.js
src/: main.cpp
templates/: asdf.html  body.html  color_themes.html  fdsa.html  head.html
